--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
     "mysql2": "^2.3.3",
