--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.0.3",
     "csurf": "^1.9.0",
+    "dotenv": "^16.0.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
@@ -34,7 +35,7 @@
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
     "mysql2": "^1.6.1",
-    "nodemailer": "^4.6.8",
+    "nodemailer": "^4.7.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^2.0.3",
     "sequelize": "^5.0.0-beta.11"
