--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
+    "express-validator": "^6.14.3",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
     "mysql2": "^1.6.1",
